# YACppTetr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_n_launch.sh  build_n_test.sh  configure.sh  main.cpp  rebuild_n_launch.sh
include/: main.h
include/engine/: backbone.h  state.h
include/util/: logger.h
src/: main.cpp
src/engine/: CMakeLists.txt  backbone.cpp
tests/: CMakeLists.txt  tests.cpp
